# fulgur

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: nats.json
fulgur-controller/: CMakeLists.txt
fulgur-controller/src/: main.cpp
fulgur-controller/src/controller/: Controller.hpp  PS5Controller.cpp  PS5Controller.hpp
fulgur-controller/src/utils/: welcome.cpp  welcome.hpp
fulgur-logger/: CMakeLists.txt
fulgur-logger/src/: Logger.hpp
fulgur-messaging/: CMakeLists.txt
fulgur-messaging/src/: MessagingBus.hpp  NatsMessagingBus.cpp  NatsMessagingBus.hpp
fulgur-pinger/: CMakeLists.txt
fulgur-pinger/src/: main.cpp
fulgur-telemetry/: .gitignore  rpi-aarch64.toolchain.cmake
fulgur-telemetry/src/: main.cpp
fulgur-telemetry/src/sensors/: CPUTemperatureSensor.cpp  CPUTemperatureSensor.hpp  Sensor.hpp
fulgur-viewer/: index.html  package.json  pnpm-lock.yaml
fulgur-viewer/src/: App.tsx  main.tsx
fulgur-viewer/src/assets/: globals.css
fulgur-viewer/src/components/: Battery.tsx  Controller.tsx  Signal.tsx  Stream.tsx  TVNoise.tsx  ToggleFullscreen.tsx  WebRTCPlayer.tsx
fulgur-viewer/src/store/: controller.ts  fulgur.ts
